2007-08-21  Brian Gough  <bjg@network-theory.co.uk>

	* betainv.c (gsl_cdf_beta_Pinv): added bisection method to improve
	initial approximations

2007-01-23  Brian Gough  <bjg@network-theory.co.uk>

	* betainv.c (gsl_cdf_beta_Pinv): avoid generating a NaN for lx > 0

2006-04-18  Brian Gough  <bjg@network-theory.co.uk>

	* betainv.c (gsl_cdf_beta_Qinv): fix prototype const

2006-03-07  Brian Gough  <bjg@network-theory.co.uk>

	* poisson.c: added poisson cdf

	* nbinomial.c: added negative binomial cdf

	* hypergeometric.c: added hypergeometric cdf

	* geometric.c: added geometric cdf

	* binomial.c (gsl_cdf_binomial_Q): added binomial cdf

	* test.c: added discrete function tests

	* gamma.c (gsl_cdf_gamma_P, gsl_cdf_gamma_Q): clean up unused
	code, ensure that branches make P+Q=1 always true

	* fdistinv.c (gsl_cdf_fdist_Pinv): use P instead of p for consistency

	* fdist.c (gsl_cdf_fdist_Q): use Q instead of P for consistency

	* beta.c (gsl_cdf_beta_Q): use Q instead of P for consistency

2006-02-27  Brian Gough  <bjg@network-theory.co.uk>

	* fdistinv.c (gsl_cdf_fdist_Pinv, gsl_cdf_fdist_Qinv): added
	inverse functions

	* betainv.c (gsl_cdf_beta_Pinv, gsl_cdf_beta_Qinv): added inverse
	functions

	* tdistinv.c (gsl_cdf_tdist_Qinv, gsl_cdf_tdist_Pinv): max 32
	iterations, prevent infinite loop

	* gammainv.c (gsl_cdf_gamma_Qinv, gsl_cdf_gamma_Pinv): max 32
	iterations, prevent infinite loop

2005-06-20  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: removed tests using subnormal values, since they tend to
	fail when extended precision registers are not available.	

2004-10-26  Brian Gough  <bjg@network-theory.co.uk>

	* exppow.c: added exppow distribution

2004-10-01  Brian Gough  <bjg@network-theory.co.uk>

	* beta.c (gsl_cdf_beta_P, gsl_cdf_beta_P): return consistent
	results for out of range values.

2003-08-27  Brian Gough  <bjg@network-theory.co.uk>

	* gauss.c: use parentheses around constant macros to avoid -(-X)
	being interpreted as --X
