@@ -1,3 +1,14 @@
+2007-08-22  Brian Gough  <bjg@network-theory.co.uk>
+
+	* betainv.c (gsl_cdf_beta_Pinv): added an error check for
+	inaccurate results
+
+	* gammainv.c (gsl_cdf_gamma_Pinv): added an error check for
+	inaccurate results
+
+	* tdistinv.c (gsl_cdf_tdist_Pinv): added an error check for
+	inaccurate results
+
 2007-08-21  Brian Gough  <bjg@network-theory.co.uk>
 
 	* betainv.c (gsl_cdf_beta_Pinv): added bisection method to improve
